# ExperienceTrack

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_tests.py
examples/: basic_usage.py
exprule/: __init__.py
exprule/agents/: __init__.py  base_agent.py
exprule/core/: __init__.py  context.py  experience.py  feedback.py
exprule/engine/: __init__.py  abstraction_engine.py  query_engine.py  update_engine.py
exprule/storage/: __init__.py  base.py  memory.py  sqlite.py
exprule/utils/: __init__.py  serialization.py  versioning.py
tests/: test_core.py
